manifests/network/cilium/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: cilium
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: tls
    sectionName: http
  hostnames:
  - "*.ucdialplans.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames: []
  rules:
  - backendRefs:
    - name: hubble-ui
      namespace: cilium
      kind: Service
      port: 80
